crates/edgedb_codegen/tests/snapshots/codegen__codegen_literals@case_01_str.snap
---
source: crates/edgedb_codegen/tests/codegen.rs
expression: "&content"
---
pub mod example {
	use ::edgedb_codegen::exports as e;
	#[doc = r" Execute the desired query."]
	#[cfg(feature = "query")]
	pub async fn query(
		client: &e::edgedb_tokio::Client,
	) -> core::result::Result<Output, e::edgedb_errors::Error> {
		client
			.query_required_single("select 'i ❤\u{fe0f} edgedb'", &())
			.await
	}
	#[doc = r" Compose the query as part of a larger transaction."]
	#[cfg(feature = "query")]
	pub async fn transaction(
		conn: &mut e::edgedb_tokio::Transaction,
	) -> core::result::Result<Output, e::edgedb_errors::Error> {
		conn.query_required_single("select 'i ❤\u{fe0f} edgedb'", &())
			.await
	}
	pub type Input = ();
	pub type Output = String;
}
