crates/edgedb_codegen/tests/snapshots/codegen__codegen_literals@case_03_int64.snap
---
source: crates/edgedb_codegen/tests/codegen.rs
expression: "&content"
---
pub mod example {
	#[doc = r" Execute the desired query."]
	#[cfg(feature = "query")]
	pub async fn query(
		client: &edgedb_tokio::Client,
	) -> core::result::Result<Output, edgedb_errors::Error> {
		client.query_required_single("select 3", &()).await
	}
	#[doc = r" Compose the query as part of a larger transaction."]
	#[cfg(feature = "query")]
	pub async fn transaction(
		conn: &mut edgedb_tokio::Transaction,
	) -> core::result::Result<Output, edgedb_errors::Error> {
		conn.query_required_single("select 3", &()).await
	}
	pub type Input = ();
	pub type Output = i64;
}
