crates/edgedb_codegen/tests/snapshots/codegen__codegen_literals@case_04_float64.snap
---
source: crates/edgedb_codegen/tests/codegen.rs
expression: "&content"
---
pub mod example {
	use ::edgedb_codegen::exports as e;
	#[doc = r" Execute the desired query."]
	#[cfg(feature = "query")]
	pub async fn query(
		client: &e::edgedb_tokio::Client,
	) -> core::result::Result<Output, e::edgedb_errors::Error> {
		client.query_required_single("select 314e-2", &()).await
	}
	#[doc = r" Compose the query as part of a larger transaction."]
	#[cfg(feature = "query")]
	pub async fn transaction(
		conn: &mut e::edgedb_tokio::Transaction,
	) -> core::result::Result<Output, e::edgedb_errors::Error> {
		conn.query_required_single("select 314e-2", &()).await
	}
	pub type Input = ();
	pub type Output = f64;
}
