crates/edgedb_codegen/tests/snapshots/codegen__codegen_literals@case_10_bytes.snap
---
source: crates/edgedb_codegen/tests/codegen.rs
expression: "&content"
---
pub mod example {
	#[doc = r" Execute the desired query."]
	#[cfg(feature = "query")]
	pub async fn query(
		client: &edgedb_tokio::Client,
	) -> core::result::Result<Output, edgedb_errors::Error> {
		client
			.query_required_single("select b'bina\\x01ry'", &())
			.await
	}
	#[doc = r" Compose the query as part of a larger transaction."]
	#[cfg(feature = "query")]
	pub async fn transaction(
		conn: &mut edgedb_tokio::Transaction,
	) -> core::result::Result<Output, edgedb_errors::Error> {
		conn.query_required_single("select b'bina\\x01ry'", &())
			.await
	}
	pub type Input = ();
	pub type Output = bytes::Bytes;
}
